# MIPModeler

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  DepsEnv.bat  ExportBinaries.bat  MIPModeler.pro  MIPModelerEnv.bat  MIPModelerEnv_build.bat  MIPModelerEnv_build.sh  QtCreator.bat  QtCreator_msvc2019.bat  QtEnv.bat  README  README.MD  build.bat  buildAll.bat  buildAll.sh  buildAll_arg.bat  buildAll_arg_msvc2019.bat  buildHighs.bat  environ.sh  project  setDepsPath.bat.exemple
GAMSModeler/: CMakeLists.txt  GAMSData.cpp  GAMSData.h  GAMSDataParam1D.cpp  GAMSDataParam1D.h  GAMSDataParam2D.cpp  GAMSDataParam2D.h  GAMSDataParam3D.cpp  GAMSDataParam3D.h  GAMSDataScalar.cpp  GAMSDataScalar.h  GAMSDataSet.cpp  GAMSDataSet.h  GAMSEnv.bat  GAMSModel.cpp  GAMSModel.h  GAMSModeler.cpp  GAMSModeler.h  GAMSModeler.pro  GAMSModeler.vcxproj  GAMSModeler.vcxproj.filters  GAMSModeler_global.h  Makefile  Makefile.Debug  Makefile.Release  PropertyGAMS.props
MIPModelerCore/: .gitignore  MIPExpression.h  MIPModel.cpp  MIPModel.h  MIPModelerCore.pro  MIPModelerCore.vcxproj  MIPModelerCore.vcxproj.filters  MIPModeler_global.h  MIPSpecialOrderedSet.cpp  MIPUtils.cpp  MIPUtils.h  MIPVariable3D.h  MIPWarmStart.cpp  Makefile  Makefile.Debug  Makefile.Release
MIPModelerCore/include/: MIPConstraint.h  MIPExpression.h  MIPModel.h  MIPModeler.h  MIPSpecialOrderedSet.h  MIPSubobjective.h  MIPUtils.h  MIPVariable1D.h  MIPVariable2D.h  MIPWarmStart.h
MIPModelerCore/src/: MIPExpression.cpp  MIPModel.cpp  MIPSubobjective.cpp  MIPSubobjective.h  MIPUtils.cpp  MIPVariable2D.cpp
MIPSolverInterface/: CoinOREnv.bat  CplexEnv.bat  MosekEnv.bat  OsiEnv.bat
MIPSolverInterface/MIPCbcSolver/: .gitignore  CMakeLists.txt  MIPCbcSolver.cpp  MIPCbcSolver.h  MIPCbcSolver.pro  MIPCbcSolver.vcxproj  MIPCbcSolver.vcxproj.filters  PropertyCbc.props
MIPSolverInterface/MIPCbcSolver - Copie/: MIPCbcSolver.h  MIPCbcSolver.pro  MIPCbcSolver_global.h  Makefile  Makefile.Debug  Makefile.Release
MIPSolverInterface/MIPClpSolver/: .gitignore  CMakeLists.txt  MIPClpSolver.cpp  MIPClpSolver.h  MIPClpSolver.pro  MIPClpSolver.vcxproj  MIPClpSolver.vcxproj.filters  MIPClpSolver_global.h  PropertyClp.props
MIPSolverInterface/MIPCpxSolver/: CMakeLists.txt  CplexEnv.bat  CplexEnv.sh  MIPCpxSolver.cpp  MIPCpxSolver.h  MIPCpxSolver.pro  MIPCpxSolver.vcxproj  MIPCpxSolver.vcxproj.filters  MIPCpxSolver_global.h  Makefile  Makefile.Debug  Makefile.Release  PropertyCplex.props
MIPSolverInterface/MIPHiGHSSolver/: CMakeLists.txt  MIPHighsSolver.cpp  MIPHighsSolver.h  MIPHighsSolver.pro  MIPHighsSolver_global.h
MIPSolverInterface/MIPMskSolver/: MIPMskSolver.cpp  MIPMskSolver.h  MIPMskSolver.pro  MIPMskSolver_global.h  Makefile  Makefile.Debug  Makefile.Release  MosekEnv.bat
MIPSolverInterface/MIPSolver/: CMakeLists.txt  IMIPSolver.h  MIPSolver.pro  MIPSolver.vcxproj  MIPSolver.vcxproj.filters  MIPSolverFactory.cpp  MIPSolverFactory.h  MIPSolver_global.h
ModelerInterface/: CMakeLists.txt  ModelerFactory.cpp  ModelerFactory.h  ModelerInterface.h  ModelerInterface.pro  ModelerInterface.vcxproj  ModelerInterface.vcxproj.filters  modelerinterface_global.h
cmake/: ProjectVersion.cmake  default_options.cmake  mipmodeler-config.cmake.in
core/: CMakeLists.txt  MIPConstraint.cpp  MIPConstraint.h  MIPExpression.cpp  MIPExpression.h  MIPModel.cpp  MIPModel.h  MIPModeler.cpp  MIPModeler.h  MIPModelerCore.pro  MIPModelerVersion.in  MIPUtils.cpp  MIPUtils.h  MIPVariable0D.cpp  MIPVariable0D.h  MIPVariable1D.cpp  MIPVariable3D.cpp  Makefile  Makefile.Debug  Makefile.Release  PropertyEigen.props  PropertyMIPModeler.props  core.pro  core.vcxproj  core.vcxproj.filters
doc/: MIPModeler.pptx  doxygen.in
lib/debug/: MIPCpxSolver1290.exp  MIPCpxSolver1290.ilk  MIPCpxSolver1290.lib  MIPModeler.exp  MIPModeler.lib  MIPMskSolver81.exp  MIPMskSolver81.ilk  MIPMskSolver81.lib
lib/release/: GAMSModeler39.exp  MIPCbcSolver.exp  MIPCbcSolver.lib  MIPClpSolver.exp  MIPClpSolver.lib  MIPCpxSolver1290.exp  MIPCpxSolver1290.lib  MIPCpxSolver2010.exp  MIPCpxSolver2010.lib  MIPModeler.exp  MIPModeler.lib  MIPMskSolver81.exp  MIPMskSolver81.lib  MIPMskSolver_8_1.exp
lib/releasse/: GAMSModeler39.exp  GAMSModeler39.lib  MIPCbcSolver.exp  MIPClpSolver.exp  MIPClpSolver.lib  MIPCpxSolver2010.exp  MIPModeler.exp  MIPMskSolver_8_1.exp  MIPMskSolver_8_1.lib
test/: test.pro
test/testTransport/: testTransport.pro  test_MIPModeler.h  test_MIPModeler_ClpSolver.cpp  test_MIPModeler_CplexSolver.cpp  tst_testTransport.cpp
